--- a/package.json
+++ b/package.json
@@ -8,7 +8,19 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+
+    "build:aot:prod": "npm run clean:dist && npm run clean:aot && cross-env BUILD_AOT=1 npm run webpack -- --config config/webpack.prod.js  --progress --profile --bail",
+    "build:aot": "npm run build:aot:prod",
+    "build:dev": "npm run clean:dist && npm run webpack -- --config config/webpack.dev.js --progress --profile",
+    "build:docker": "npm run build:prod && docker build -t angular2-webpack-start:latest .",
+    "build:prod": "npm run clean:dist && npm run webpack -- --config config/webpack.prod.js  --progress --profile --bail",
+    "ci:aot": "npm run lint && npm run test && npm run build:aot && npm run e2e",
+    "ci:jit": "npm run lint && npm run test && npm run build:prod && npm run e2e",
+    "ci:nobuild": "npm run lint && npm test && npm run e2e",
+    "ci:testall": "npm run lint && npm run test && npm run build:prod && npm run e2e && npm run build:aot && npm run e2e",
+    "ci:travis": "npm run lint && npm run test && npm run build:aot && npm run e2e:travis",
+    "ci": "npm run ci:testall"
   },
   "private": true,
   "dependencies": {
