--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "body-parser": "^1.18.2",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
+    "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
@@ -34,17 +38,25 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.17",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.6.2",
+    "jasmine": "^2.8.0",
+    "jasmine-core": "^2.6.4",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-requirejs": "^1.1.0",
+    "karma-safari-launcher": "^1.0.0",
+    "less": "^2.7.3",
+    "nodemon": "^1.14.7",
     "protractor": "~5.1.2",
+    "requirejs": "^2.3.5",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2"
