--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "material-design-iconic-font": "^2.2.0",
     "popper.js": "^1.12.9",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.2",
