--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,27 @@
-sudo: false
+sudo: required
 dist: trusty
 language: node_js
-
-cache:
-  directories:
-    - node_modules
-
-addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
-
 node_js:
   - "6"
   - "7"
-  - "node"
 
-matrix:
-  fast_finish: true
+addons:
+apt:
+  sources:
+    - google-chrome
+  packages:
+    - google-chrome-stable
+    - google-chrome-beta
 
 before_install:
-  - npm install npm@5 -g
-  - npm cache verify
-  - npm prune
-  - npm update
-
-install:
-  - npm install
-
-after_install:
-  - npm rebuild node-sass
-  - ./node_modules/protractor/bin/webdriver-manager update
-
-before_script:
-  - npm rebuild node-sass
+  - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-  - sleep 3
 
-#script:
-#  - npm run ci:travis
+before_script:
+- npm install -g angular-cli
+- npm install -g karma
+- npm install
+- ng build
+
+script: karma start config/karma.conf.js --single-run
