--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "express": "^4.16.2",
     "jquery": "^3.2.1",
     "material-design-iconic-font": "^2.2.0",
+    "moment": "^2.20.1",
     "popper.js": "^1.12.9",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.3",
+    "@angular/cli": "^1.6.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
