--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
@@ -31,6 +30,7 @@
     "popper.js": "^1.12.9",
     "roboto-fontface": "^0.8.0",
     "rxjs": "^5.5.2",
+    "tslib": "^1.8.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
