--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.4",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
+    "@angular/material": "^5.0.4",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
@@ -24,6 +28,7 @@
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "material-design-iconic-font": "^2.2.0",
     "moment": "^2.20.1",
