--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angularfire2": "^5.0.0-rc.4",
     "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "firebase": "^4.8.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "material-design-iconic-font": "^2.2.0",
